ros2_ws/log/build_2025-02-18_18-06-43/signal_processing/stdout_stderr.log
running egg_info
writing ../../build/signal_processing/signal_processing.egg-info/PKG-INFO
writing dependency_links to ../../build/signal_processing/signal_processing.egg-info/dependency_links.txt
writing entry points to ../../build/signal_processing/signal_processing.egg-info/entry_points.txt
writing requirements to ../../build/signal_processing/signal_processing.egg-info/requires.txt
writing top-level names to ../../build/signal_processing/signal_processing.egg-info/top_level.txt
reading manifest file '../../build/signal_processing/signal_processing.egg-info/SOURCES.txt'
writing manifest file '../../build/signal_processing/signal_processing.egg-info/SOURCES.txt'
running build
running build_py
copying signal_processing/signal_generator.py -> /shared-folder/ManchesterChallenges/ros2_ws/build/signal_processing/build/lib/signal_processing
running install
running install_lib
copying /shared-folder/ManchesterChallenges/ros2_ws/build/signal_processing/build/lib/signal_processing/signal_generator.py -> /shared-folder/ManchesterChallenges/ros2_ws/install/signal_processing/lib/python3.10/site-packages/signal_processing
byte-compiling /shared-folder/ManchesterChallenges/ros2_ws/install/signal_processing/lib/python3.10/site-packages/signal_processing/signal_generator.py to signal_generator.cpython-310.pyc
running install_data
running install_egg_info
  File "/shared-folder/ManchesterChallenges/ros2_ws/install/signal_processing/lib/python3.10/site-packages/signal_processing/signal_generator.py", line 56
    self.get_logger().info(f'Time': {self.t:.2f}, Signal: {signal_msg.data:.2f})
                                             ^
SyntaxError: invalid decimal literal

removing '/shared-folder/ManchesterChallenges/ros2_ws/install/signal_processing/lib/python3.10/site-packages/signal_processing-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/signal_processing/signal_processing.egg-info to /shared-folder/ManchesterChallenges/ros2_ws/install/signal_processing/lib/python3.10/site-packages/signal_processing-0.0.0-py3.10.egg-info
running install_scripts
Installing signal_generator script to /shared-folder/ManchesterChallenges/ros2_ws/install/signal_processing/lib/signal_processing
writing list of installed files to '/shared-folder/ManchesterChallenges/ros2_ws/build/signal_processing/install.log'
